# Yancuo

./: .env.example  .gitignore  README.md
android/: .gitignore  README.md  local.properties.example  settings.gradle.kts
apps/windows/: README.md  pyproject.toml
apps/windows/.yancuo_data_smoke/: identity.json
apps/windows/src/yancuo_win/: __init__.py  __main__.py  main.py
apps/windows/src/yancuo_win/ai/: __init__.py  base.py  factory.py  mock_provider.py  openai_compatible.py
apps/windows/src/yancuo_win/application/: __init__.py  ai_search_service.py  ai_service.py  bootstrap.py  cloud_service.py  intake_service.py  note_ai_service.py  note_service.py  search_service.py  search_spec.py  services.py  sync_service.py
apps/windows/src/yancuo_win/assets/: __init__.py  object_store.py
apps/windows/src/yancuo_win/cloud/: __init__.py  base.py  factory.py  github.py  gitlink.py  local_folder.py
apps/windows/src/yancuo_win/config/: __init__.py  settings.py
apps/windows/src/yancuo_win/data/: __init__.py  db.py  ids.py  migrate.py  migrate_cli.py  models.py
apps/windows/src/yancuo_win/domain/: __init__.py  identity.py  operations.py  review_rules.py  rules.py  similarity.py  sync_merge.py
apps/windows/src/yancuo_win/import_export/: __init__.py  ebpack.py  gmshare.py  markdown_problem.py  workspace.py
apps/windows/src/yancuo_win/infrastructure/: __init__.py  archive.py  credentials.py  paths.py
apps/windows/src/yancuo_win/resources/config/: default.toml
apps/windows/src/yancuo_win/resources/protocol/schemas/: operation.schema.json
apps/windows/src/yancuo_win/review/: __init__.py  changeset.py
apps/windows/src/yancuo_win/tasks/: __init__.py  note_worker.py  search_worker.py  worker.py
apps/windows/src/yancuo_win/ui/: __init__.py  duplicate_dialog.py  image_viewer.py  intake_page.py  main_window.py  math_content.py  note_page.py  problem_detail.py  problem_editor.py  review_dialog.py  review_page.py  settings_dialog.py  task_center.py  theme.py  today_review.py  widgets.py
config/: default.toml
docs/: 01_产品功能与本地架构.md  02_云端同步与安卓端设计.md  04_开发路线图.md  (+11 more)
(+80 files in other folders)
